# Tensorflow-Lite

./: .gitmodules  CMakeLists.txt  CuteModel.cpp  CuteModel.hpp  README.md
cutemodel/: README.md
lib/: libtensorflowlite_c.dylib
